[workspace]
members = [
    "zngur",
    "zngur-cli",
    "zngur-def",
    "zngur-generator",
    "zngur-parser",
    "examples/simple",
    "examples/tutorial",
    "examples/rustyline",
    "examples/rayon",
    "examples/cxx_demo",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 3
