[workspace]
members = [
    "zngur",
    "zngur-cli",
    "zngur-def",
    "zngur-generator",
    "zngur-parser",
    "zngur-autozng",
    "examples/*",
    "xtask",
    "benchmark",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
