[package]
name = "benchmark"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
cc = "1.0"
build-rs = "0.1.2"
zngur = { path = "../zngur" }

[[bench]]
name = "simple"
harness = false
