[package]
name = "xtask"
version = "0.5.0"
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xshell = "0.2.5"
anyhow = "1.0"
clap = { version = "4.3.12", features = ["derive"] }
