[package]
name = "zngur-auto-layout"
description = "Automatic layout extraction for Zngur types via rustc"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
zngur-def = { path = "../zngur-def" }
