[package]
name = "zngur-cli"
description = "CLI of the Zngur, a Rust/C++ interoperability tool"
readme = "../README.md"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "zngur"
path = "src/main.rs"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zngur = { version = "=0.5.0", path = "../zngur" }
clap = { version = "4.3.12", features = ["derive"] }
