[package]
name = "zngur-cli"
description = "CLI of the Zngur, a Rust/C++ interoperability tool"
readme = "../README.md"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "zngur"
path = "src/main.rs"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zngur = { version = "=0.6.0", path = "../zngur" }
zngur-def = {path = "../zngur-def/"}
clap = { version = "4.3.12", features = ["derive"] }
rustdoc-json = "0.9.7"
rustdoc-types = "0.55.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
