[package]
name = "zngur-cli"
description = "CLI of the Zngur, a Rust/C++ interoperability tool"
readme = "../README.md"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "zngur"
path = "src/main.rs"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zngur = { version = "=0.7.0", path = "../zngur" }
zngur-auto-layout = { version = "=0.7.0", path = "../zngur-auto-layout" }
zngur-parser = { version = "=0.7.0", path = "../zngur-parser" }
zngur-def = { version = "=0.7.0", path = "../zngur-def" }
clap = { version = "4.3.12", features = ["derive"] }
