[package]
name = "zngur-def"
description = "Data types that define the structure of a zng file"
readme = "../README.md"
version = "0.3.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iter_tools = "0.1.4"
