[package]
name = "zngur-def"
description = "Data types that define the structure of a zng file"
readme = "../README.md"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.13.0"
itertools = "0.11"
