[package]
name = "zngur-generator"
description = "Generates Rust and C++ glue codes from the zng file"
readme = "../README.md"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11"
sailfish = "0.10"
zngur-parser = { version = "=0.7.0", path = "../zngur-parser" }
zngur-def = { version = "=0.7.0", path = "../zngur-def" }
sha2 = "0.10.9"
hex = "0.4.3"
