[package]
name = "zngur-generator"
description = "Generates Rust and C++ glue codes from the zng file"
readme = "../README.md"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11"
askama = "0.12"
zngur-parser = { version = "=0.9.0", path = "../zngur-parser" }
zngur-def = { version = "=0.9.0", path = "../zngur-def" }
sha2 = "0.10.9"
hex = "0.4.3"
indexmap = "2.13.0"
