[package]
name = "zngur-parser"
description = "Parser of the zng file"
version = "0.3.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
chumsky = { version = "1.0.0-alpha.4", features = ["label"] }
iter_tools = "0.1.4"
zngur-def = { version = "=0.3.0", path = "../zngur-def" }

[dev-dependencies]
expect-test = "1.4.1"
strip-ansi-escapes = "0.2.0"
