[package]
name = "zngur-parser"
description = "Parser of the zng file"
readme = "../README.md"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
chumsky = { version = "=1.0.0-alpha.8", features = [] }
itertools = "0.11"
zngur-def = { version = "=0.5.0", path = "../zngur-def" }

[dev-dependencies]
expect-test = "1.4.1"
strip-ansi-escapes = "0.2.0"
