[package]
name = "zngur"
description = "A Rust/C++ interoperability tool"
version = "0.2.2"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zngur-generator = { version = "=0.2.2", path = "../zngur-generator" }
