[package]
name = "zngur"
description = "A Rust/C++ interoperability tool"
readme = "../README.md"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zngur-generator = { version = "=0.7.0", path = "../zngur-generator" }
rustdoc-types = "0.55.0"
