[package]
name = "example-cpp-inheritance"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
cpp_inherit = { path = "cpp_inherit" }
zngur-lib = { path = "../../zngur-lib" }

[build-dependencies]
cc = "1.0"
build-rs = "0.1.2"
zngur = { path = "../../zngur" }
