[package]
name = "example-multiple-modules"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
packet_crate = { path = "packet" }
receiver_crate = { path = "receiver" }
aggregation_crate = { path = "aggregation" }
processor_crate = { path = "processor" }
