[package]
name = "example-multiple-modules"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
packet = { path = "packet" }
receiver = { path = "receiver" }
aggregation = { path = "aggregation" }
processor = { path = "processor" }
