[package]
name = "zngur_bridge_lib"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
packet_crate = { path = "../packet" }
receiver_crate = { path = "../receiver" }
aggregation_crate = { path = "../aggregation" }
processor_crate = { path = "../processor" }
zngur_types = { path = "../../../zngur-types", optional = true } # If needed, but usually generated includes it
